# baumstamm

./: .gitignore  Cargo.toml  README.md  bacon.toml  package-lock.json  package.json
.github/workflows/: deploy.yml  release.yml
baumstamm-app/: elm.json  index.html  index.js  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
baumstamm-app/src/: Common.elm  Connections.elm  Data.elm  Main.elm  Nav.elm  Person.elm  Rpc.elm  Tree.elm  Utils.elm  app.html  bindings-tauri.ts  bindings.ts
baumstamm-app/src-tauri/: Cargo.toml  tauri.conf.json
baumstamm-app/src-tauri/icons/: icon.icns
baumstamm-app/src-tauri/src/: commands.rs  error.rs  grid.rs  main.rs
baumstamm-app/src-tauri/src/grid/: indices.rs  items.rs
baumstamm-app/src-wasm/: Cargo.toml
baumstamm-app/src-wasm/src/: lib.rs
baumstamm-app/src/lib/: App.svelte  Connections.ts  Connector.svelte  DataView.svelte  GridItem.ts  Person.ts  PersonCard.svelte  SettingsView.svelte  Sidebar.svelte  TreeView.svelte  api.ts  image.ts  store.ts
baumstamm-app/src/lib/sidebar/: ChildSection.svelte  EditSection.svelte  InfoSection.svelte  NameSection.svelte  ParentSection.svelte  PartnerSection.svelte
baumstamm-app/src/routes/: +layout.svelte  +page.svelte
baumstamm-cli/: Cargo.toml
baumstamm-cli/src/: main.rs
baumstamm-grid/: Cargo.toml
baumstamm-grid/src/: indices.rs  items.rs  lib.rs  lines.rs
baumstamm-lib/: Cargo.toml
baumstamm-lib/src/: consistency.rs  error.rs  graph.rs  io.rs  lib.rs  tree.rs
baumstamm-lib/src/snapshots/: baumstamm_lib__graph__test__cycles-2.snap  baumstamm_lib__graph__test__cycles-3.snap  baumstamm_lib__graph__test__cycles.snap  baumstamm_lib__graph__test__display_no_retain-2.snap  baumstamm_lib__graph__test__display_no_retain.snap  baumstamm_lib__graph__test__display_retain_one.snap  baumstamm_lib__graph__test__display_retain_two.snap  baumstamm_lib__graph__test__double_inheritance-2.snap  baumstamm_lib__graph__test__double_inheritance-3.snap  baumstamm_lib__graph__test__double_inheritance.snap  baumstamm_lib__graph__test__double_inheritance_and_xs-2.snap  baumstamm_lib__graph__test__double_inheritance_and_xs-3.snap  baumstamm_lib__graph__test__double_inheritance_and_xs.snap  baumstamm_lib__graph__test__indirect_di-2.snap  baumstamm_lib__graph__test__indirect_di-3.snap  baumstamm_lib__graph__test__indirect_di.snap  baumstamm_lib__graph__test__indirect_di2-2.snap  baumstamm_lib__graph__test__indirect_di2-3.snap  baumstamm_lib__graph__test__indirect_di2.snap  baumstamm_lib__graph__test__siblings-2.snap  baumstamm_lib__graph__test__siblings-3.snap  baumstamm_lib__graph__test__siblings.snap  baumstamm_lib__graph__test__sort_long_chain-2.snap  baumstamm_lib__graph__test__sort_long_chain-3.snap  baumstamm_lib__graph__test__sort_long_chain.snap  baumstamm_lib__graph__test__xs-2.snap  baumstamm_lib__graph__test__xs-3.snap  baumstamm_lib__graph__test__xs.snap
baumstamm-lib/src/tree/: consistency.rs  graph.rs  io.rs
baumstamm-lib/src/tree/snapshots/: baumstamm_lib__tree__graph__test__complete_tree_1-2.snap  baumstamm_lib__tree__graph__test__complete_tree_1.snap  baumstamm_lib__tree__graph__test__cycles.snap  baumstamm_lib__tree__graph__test__double_inheritance-2.snap  baumstamm_lib__tree__graph__test__double_inheritance.snap  baumstamm_lib__tree__graph__test__double_inheritance_and_xs-2.snap  baumstamm_lib__tree__graph__test__double_inheritance_and_xs.snap  baumstamm_lib__tree__graph__test__xs-2.snap  baumstamm_lib__tree__graph__test__xs.snap
baumstamm-lib/test/: check_both_rels.json  child_is_parent.json  child_of_relationship.json  different_ids_rels.json  everything_connected.json  more_than_one_parent_rel.json  multiple_ids.json  no_cycles.json  self_reference.json  single_rel.json  too_few_persons_persons.json  too_few_rels_rels.json  unique_persons.json  write_relationships.json
baumstamm-lib/test/consistency/: check_both.json  child_is_parent.json  child_of_relationship.json  different_ids.json  everything_connected.json  more_than_one_parent_rel.json  multiple_ids.json  no_cycles.json  person_multiple_ids.json  self_reference.json  too_few_persons.json  too_few_rels.json
baumstamm-lib/test/graph/: cycles.json  display.json  double_inheritance.json  double_inheritance_and_xs.json  indirect_di.json  indirect_di2.json  node_tree_result.txt  siblings.json  sort_long_chain.json  xs.json
baumstamm-lib/test/io/: empty.json  single_person.json  single_rel.json  unique_persons.json  write_persons.json  write_relationships.json
baumstamm-tauri/: package.json
baumstamm-tauri/src/: style.css
baumstamm-tauri/src-tauri/: Cargo.toml  tauri.conf.json
baumstamm-tauri/src-tauri/src/: main.rs  routes.rs
baumstamm-tauri/src/components/: BaumstammGrid.vue  PersonCard.vue
baumstamm-tauri/src/types/: ConnectorType.ts  GridItemWrapper.ts  Person.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/baumstamm-lib/src/: grid.rs
src-tauri/baumstamm-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: graph.rs  grid.rs  lib.rs  main.rs  routes.rs  tree.rs  util.rs
src-tauri/src/graph/: consistency.rs  io.rs
src-tauri/src/tree/: consistency.rs  graph.rs  io.rs
src-tauri/test/: check_both_persons.json  check_both_rels.json  child_is_parent.json  child_of_relationship.json  everything_connected.json  more_than_one_parent_rel.json  multiple_ids.json  no_cycles.json  person_multiple_ids.json  self_reference.json  single_person.json  single_rel.json  unique_persons.json  write_persons.json  write_relationships.json
src/components/: BaumstammGrid.vue  Connector.vue  GridItem.vue  PersonCard.vue
src/types/: GridItemWrapper.ts  Person.ts
test/: check_both_persons.json  child_is_parent.json  different_ids_rels.json  everything_connected.json  more_than_one_parent_rel.json  person_multiple_ids.json  single_rel.json  too_few_persons_rels.json  too_few_rels_rels.json  unique_persons.json  write_relationships.json
