[workspace]
members = [
    "baumstamm-lib",
    "baumstamm-grid",
    "baumstamm-cli",
    "baumstamm-app/src-tauri",
    "baumstamm-app/src-wasm"
]

[workspace.package]
description = "Baumstamm - Stammbäume erstellen"
authors = ["Alec Ghost"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
[profile.dev.package.insta]
opt-level = 3
