[workspace]
resolver = "2"
members = [
    "baumstamm-lib",
    "baumstamm-grid",
    "baumstamm-cli",
    "baumstamm-app/src-tauri",
    "baumstamm-app/src-wasm"
]

[workspace.package]
description = "Baumstamm - Create family trees"
authors = ["Alec Ghost"]
license = "GPL-3.0-or-later"
repository = "https://github.com/AlecGhost/baumstamm"
edition = "2021"
rust-version = "1.70"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
[profile.dev.package.insta]
opt-level = 3
