[package]
name = "baumstamm-grid"
version = "0.1.0"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baumstamm-lib = { path = "../baumstamm-lib" }
serde = { version = "1.0", features = ["derive"] }
specta = "1.0.4"
itertools = "0.11.0"
