[package]
name = "baumstamm-grid"
version = "0.1.0"
authors = ["Alec Ghost"]
license = "Apache-2.0"
repository = "https://github.com/AlecGhost/baumstamm"
edition = "2021"

[dependencies]
baumstamm-lib = { path = "../baumstamm-lib" }
serde = { version = "1.0", features = ["derive"] }
specta = "1.0.5"
itertools = "0.12.0"
