[package]
name = "baumstamm-lib"
version = "0.1.0"
edition = "2021"
authors = ["Alec Ghost"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
thiserror = "1.0.43"

[dependencies.uuid]
version = "1.1.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
]

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
pretty_assertions = "1.3.0"
