[package]
name = "baumstamm-lib"
version = "0.1.0"
authors = ["Alec Ghost"]
license = "Apache-2.0"
repository = "https://github.com/AlecGhost/baumstamm"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.12.0"
thiserror = "1.0.50"
specta = "1.0.5"
getrandom = { version = "0.2.11", features = ["js"] }

[dependencies.uuid]
version = "1.6.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
]

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
pretty_assertions = "1.4.0"
