[package]
name = "baumstamm-wasm"
version = "0.1.0"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.88"
baumstamm-lib = { path = "../../baumstamm-lib" }
baumstamm-grid = { path = "../../baumstamm-grid" }
serde-wasm-bindgen = "0.6.1"
