[package]
name = "baumstamm-wasm"
version = "0.1.0"
description = "Baumstamm App (Wasm-Backend)"
authors = ["Alec Ghost"]
license = "GPL-3.0-or-later"
repository = "https://github.com/AlecGhost/baumstamm"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
baumstamm-lib = { path = "../../baumstamm-lib" }
baumstamm-grid = { path = "../../baumstamm-grid" }
serde-wasm-bindgen = "0.6.3"
