[package]
name = "baumstamm-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Alec Ghost"]
default-run = "baumstamm-tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
baumstamm-lib = { path = "../../baumstamm-lib" }
tauri = { version = "1.0.5", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
